# odatse-SXRD

./: CMakeLists.txt  README.md  index.html  pyproject.toml
.github/workflows/: deploy_docs.yml  deploy_pypi.yml  run_test.yml
doc/en/source/: acknowledgement.rst  conf.py  contact.rst  install.rst  introduction.rst
doc/en/source/tutorial/: index.rst  user_program.rst
doc/ja/source/: acknowledgement.rst  conf.py  contact.rst  install.rst  introduction.rst  solver.rst
doc/ja/source/tutorial/: index.rst  minsearch.rst  user_program.rst
manual/main/en/: .buildinfo  acknowledgement.html  contact.html  genindex.html  index.html  install.html  introduction.html  objects.inv  search.html  searchindex.js  solver.html
manual/main/en/_sources/: acknowledgement.rst.txt  contact.rst.txt  index.rst.txt  install.rst.txt  introduction.rst.txt  solver.rst.txt
manual/main/en/tutorial/: index.html  minsearch.html  user_program.html
manual/main/ja/: .buildinfo  acknowledgement.html  contact.html  genindex.html  index.html  install.html  introduction.html  objects.inv  search.html  searchindex.js  solver.html
manual/main/ja/_sources/: index.rst.txt  install.rst.txt  (+1 more)
sample/mapper/: do.sh
sample/minsearch/: do.sh
sample/user_program/: simple.py  simple2.py
src/: main.py
src/SXRD/: __init__.py  _main.py  input.py  parameter.py  sxrd.py
src/sxrd/: _main.py
tests/: CMakeLists.txt
tests/mapper/: do.sh
tests/minsearch/: do.sh  ref_SimplexData.txt
tests/unit/: input.toml  ls_1.fit_ref  lsfit.in_ref  stdout_ref  test_parameters.py  test_sxrd.py
(+4 files in other folders)
