[tool.poetry]
name = "odatse-SXRD"
version = "1.0-dev"
description = "SXRD solver module for ODAT-SE: data-analysis software of quantum beam diffraction experiments for 2D material structure"
authors = ["2DMAT developers <2dmat-dev@issp.u-tokyo.ac.jp>"]
license = "GPL-3.0-or-later"

readme = "README.md"
repository = "https://github.com/2DMAT/odatse-SXRD"

packages = [
  { include = "sxrd", from = "src", to = "odatse/extra" }
  ]

[tool.poetry.dependencies]
python = ">=3.6.8"
numpy = "^1.14"
#mpi4py = {version = "^3", optional = true}
py2dmat = "^2"

#[tool.poetry.extras]
#min_search = ["scipy"]
#bayes = ["physbo"]
#exchange = ["mpi4py"]
#all = ["scipy", "mpi4py", "physbo"]

#[tool.poetry.dev-dependencies]
#black = "^22.3.0"
#pynvim = "^0.4.3"

[tool.poetry.scripts]
odatse-SXRD = "odatse.extra.sxrd._main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
